# loguru-scientist

./: README.md  __init__.py  main.py  pyproject.toml  scientist.py
loguru_scientist/: __init__.py  constant.py  scientist.py  tooling.py
loguru_scientist/test/: test_metric_logging.py
